# RAG-Workshop

./: .env.example  .gitignore  README.md  evaluate.py  graph_retrieval.py  pyproject.toml  rag-1-chat.py  rag-2a-ingest.py  rag-2b-chat.py  rag-3a-ingest.py  rag-3b-chat.py  rag-4a-graph.py  rag-4b-chat.py  rag.py  requirements.txt  set-key.ps1  set-key.sh
data/: SR_101_BV_de.md  SR_142.20_AIG_de.md  SR_142.31_AsylG_de.md  SR_173.110_BGG_de.md  SR_210_ZGB_de.md  SR_220_OR_de.md  SR_235.1_DSG_de.md  SR_272_ZPO_de.md  SR_311.0_StGB_de.md  SR_312.0_StPO_de.md  SR_641.20_MWSTG_de.md  SR_642.11_DBG_de.md  SR_830.1_ATSG_de.md  SR_831.10_AHVG_de.md  embeddings.md  retrieval-augmented-generation.md  vector-databases.md
evaluation/: questions.json
notebooks/: 01_rag-zu-fuss.ipynb
scripts/: fedlex_download.py  fedlex_pdf_to_md.py
tests/: test_evaluation.py
