[project]
name = "rag-demo"
version = "0.1.0"
description = "Minimal, no-blackbox RAG example for the AKROS RAG workshop: local file-based Chroma vector store, fixed-size chunking, embeddings + chat via one OpenAI-compatible endpoint (Marvin/Ollama)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5",
    "openai>=1.40",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
# Didactic layer for Block 1 — installed in the container, optional locally.
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[tool.poetry]
package-mode = false
